test/compile_errors/err_regex_capture_after_branch.w
//! expect-check-fail: undefined variable

fn main:
    let line = "status=200"
    if line =~ /^status=(\d+)$/:
        assert($1 == "200")
    print($1)
